--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ header {
     padding: 2rem 0 1rem 0;
 }
 
+.grey {
+    color: gray;
+}
+
 .container {
     width: 80%;
     margin: 0 auto;
@@ -34,12 +38,17 @@ a {
     text-decoration: none;
 }
 
+ul {
+    padding: 0 0 30px 20px;
+}
+
 .container > p {
     padding: 1rem 0 2rem 0;
 }
 
 table {
     padding-top: 2rem;
+    border-collapse: collapse;
 }
 
 th {
@@ -47,7 +56,27 @@ th {
     background-color: rgba(32, 169, 229, 1);;
 }
 
+.cell-lightblue {
+    background-color: rgba(177, 229, 242, 1);
+}
+
 h3 {
     color: gray;
     margin-bottom: 1rem;
 }
+
+/* .lorem {
+    color: white;
+    font-weight: bolder;
+    position: absolute;
+}
+
+.suggestion_1 > img {
+    position: relative;
+    top: 10%;
+    left: 50%;
+}
+
+.suggestion_2 {
+    position: relative;
+} */
