--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,20 @@ th {
     background-color: rgba(32, 169, 229, 1);;
 }
 
+.left {
+    width: 25%;
+    text-align: left;
+}
+
+.center {
+    width: 25%;
+    text-align: left;
+}
+
+.right {
+    text-align: left;
+}
+
 .cell-lightblue {
     background-color: rgba(177, 229, 242, 1);
 }
