fix header background, delete a redundant class

--- a/css/style.css
+++ b/css/style.css
@@ -7,31 +7,25 @@
 header {
     background-image: url(../images/pattern.png);
     background-color: rgba(78, 160, 255, 1);
-    background-repeat: repeat;
-    background-position: center;
+    background-size: 30%;
 }
 
 .title {
     padding: 1rem 0;
 }
 
-.logo-container {
+.container {
     width: 80%;
     margin: 0 auto;
 }
 
 #logo-file {
-    max-width: 10%;
+    max-width: 20%;
     padding: 2rem 0 1rem 0;
 }
 
 .grey {
     color: gray;
-}
-
-.container {
-    width: 80%;
-    margin: 0 auto;
 }
 
 a {
